[package]
name = "Calendar"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0"
web_ical = { git = "https://github.com/terrarier2111/web_ical" }
serde = "1"
serde_json = "1"
serde_derive = "1"
dirs = "5"
fnv = "1"
anyhow = "1"
flume = "0"
iced = "0"
chrono = "0"
tokio = { version = "1", featrures = ["full"] }